cluster/database/pg/postgre-operator-ui/003-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres-operator-ui"
  namespace: "database"
  labels:
    application: "postgres-operator-ui"
spec:
  type: "ClusterIP"
  selector:
    name: "postgres-operator-ui"
  ports:
    - port: 80
      protocol: "TCP"
      targetPort: 8081
