cluster/database/pg/postgre-operator-ui/004-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "postgres-operator-ui"
  namespace: "database"
  labels:
    application: "postgres-operator-ui"
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  # ingressClassName: "ingress-nginx"
  tls:
  - hosts:
      - operator.postgresql.db.meba.xyz
    secretName: tls-operator
  rules:
    - host: "operator.postgresql.db.meba.xyz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "postgres-operator-ui"
                port:
                  number: 80
